force-app/main/default/objects/CreditCard__c/CreditCard__c.object-meta.xml
<CustomObject>
    <label>CreditCard</label>
    <nameField>
        <label>CreditCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CreditCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>