force-app/main/default/objects/CreditCard__c/fields/Monthly_one_time_cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_one_time_cost__c</fullName>
    <label>Monthly one time cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>