force-app/main/default/objects/CreditCard__c/fields/Monthly_Rental__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rental__c</fullName>
    <label>Monthly Rental</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>