force-app/main/default/objects/CreditCard__c/fields/monthly_rental_charge__c.field-meta.xml
<CustomField>
    <fullName>monthly_rental_charge__c</fullName>
    <label>monthly rental charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>