force-app/main/default/objects/CreditCard__c/fields/One_Time_Cost__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Cost__c</fullName>
    <label>One Time Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>