force-app/main/default/objects/CreditCard__c/fields/Transaction_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Charges__c</fullName>
    <label>Transaction Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>